--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules/
+node_modules/.package-lock.json
 .env
 .DS_Store
 *.log
@@ -7,4 +8,3 @@ build/
 dist/
 coverage/
 netlify.toml
-Podcast.code-workspace
