--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "puppeteer": "^24.13.0"
   }
 }
