feat: Add AI Summary Mind Map component and enhance podcast app
- Add AISummaryMindMap React component for visualizing episode insights
- Enhance podcast UI with modern dashboard layout and sidebar navigation
- Implement URL routing for /search-podcast, /podcast-details, /audio-transcription
- Refactor component structure: move from /public to /client/src architecture
- Polish PodcastDetails with improved hero styling and responsive design
- Add comprehensive documentation for AI summary process and service breakdown
- Configure new AI services and summary processing capabilities
- Update webpack proxy configuration for API routing
- Remove deprecated .gitkeep files and reorganize project structure

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#3a7bd5",
   "icons": [
     {
-      "src": "/icons/create-icons.svg",
+      "src": "/assets/images/create-icons.svg",
       "sizes": "72x72 96x96 128x128 144x144 152x152 192x192 384x384 512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
