--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "podcast-scraper",
   "version": "1.0.0",
   "description": "A simple Node.js app to scrape podcasts from RSS feeds",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "nodemon index.js || node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon server/index.js || node server/index.js",
+    "dev": "nodemon server/index.js",
+    "client": "cd client && npm start"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
