--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,6 @@
 node_modules
 npm-debug.log
 client/node_modules
-client/dist
 .git
 .gitignore
 README.md
@@ -16,3 +15,6 @@ coverage
 uploads/*.mp3
 uploads/*.wav
 uploads/*.m4a
+deploy.sh
+DEPLOYMENT.md
+CONTRIBUTING.md
