--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,23 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "buildCommand": "npm install && cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "framework": null,
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://your-backend-url.railway.app/api/$1"
+      "destination": "/api/index.js"
     },
     {
-      "source": "/ws/(.*)",
-      "destination": "https://your-backend-url.railway.app/ws/$1"
+      "source": "/health",
+      "destination": "/api/index.js"
     },
     {
       "source": "/(.*)",
       "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        }
-      ]
     }
   ]
 }
