--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "netlify-cli": "^23.5.1",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.13.0"
   }
