chore: update Netlify build config and add netlify-build script

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "client"
-  publish = "dist"
-  command = "npm install && npm run build"
+  base = "."
+  publish = "client/dist"
+  command = "npm run netlify-build"
 
 [build.environment]
   NODE_ENV = "production"
