--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "client": "cd client && npm start",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "netlify-build": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
