--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "client": "cd client && npm start",
     "build": "cd client && npm install && npm run build",
-    "netlify-build": "cd client && npm install && npm run build"
+    "netlify-build": "rm -rf node_modules client/node_modules && cd client && npm ci --production=false && npm run build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
