--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "node -v || exit 1"
+  },
+  "engines": {
+    "node": ">=16.14.0 <17.0.0"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
