chore: update build configs and add comprehensive environment templates

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,14 +1,71 @@
-# Domain Suffix Configuration
-# Add a suffix to the domain name for different environments or versions
-# 
-# Examples:
-# REACT_APP_DOMAIN_SUFFIX=-v2          # localhost -> localhost-v2
-# REACT_APP_DOMAIN_SUFFIX=-staging     # mysite.com -> mysite-staging.com  
-# REACT_APP_DOMAIN_SUFFIX=.dev         # example.com -> example.dev.com
-# REACT_APP_DOMAIN_SUFFIX=.staging     # example.com -> example.staging.com
-#
-# Leave empty or comment out for no suffix (default)
-# REACT_APP_DOMAIN_SUFFIX=
+# ===================================
+# Application Configuration
+# ===================================
+NODE_ENV=development
+PUBLIC_URL=/
 
-# Other environment variables can be added here
-# REACT_APP_API_URL=http://localhost:3000
+# ===================================
+# API Configuration
+# ===================================
+REACT_APP_API_URL=/api
+REACT_APP_WS_URL=ws://localhost:3001/ws
+API_PORT=3001
+API_HOST=localhost
+API_PROTOCOL=http
+
+# ===================================
+# Analytics & Monitoring
+# ===================================
+# Google Analytics Tracking ID
+# REACT_APP_GA_TRACKING_ID=UA-XXXXXXXXX-X
+
+# Sentry DSN for error tracking
+# REACT_APP_SENTRY_DSN=
+
+# ===================================
+# Build Information
+# ===================================
+REACT_APP_NAME=$npm_package_name
+REACT_APP_VERSION=$npm_package_version
+REACT_APP_BUILD_DATE=$npm_package_build_date
+
+# ===================================
+# Feature Flags
+# ===================================
+# Set to true to enable analytics
+REACT_APP_ENABLE_ANALYTICS=false
+
+# Enable/disable debug logging
+REACT_APP_ENABLE_LOGGING=true
+REACT_APP_ENABLE_DEBUG=true
+
+# ===================================
+# Development Settings
+# ===================================
+# For development only - enables React's Fast Refresh
+# FAST_REFRESH=true
+
+# For development with Docker on Windows/WSL
+# CHOKIDAR_USEPOLLING=true
+
+# Webpack Dev Server settings
+# WDS_SOCKET_PORT=3000
+# DANGEROUSLY_DISABLE_HOST_CHECK=true
+
+# ===================================
+# Build Settings
+# ===================================
+# Controls whether source maps are generated
+# GENERATE_SOURCEMAP=true
+
+# Disable source maps for production
+# INLINE_RUNTIME_CHUNK=false
+
+# ===================================
+# Domain Configuration
+# ===================================
+# Add a suffix to the domain name for different environments
+# Examples:
+# REACT_APP_DOMAIN_SUFFIX=-staging     # mysite.com -> mysite-staging.com
+# REACT_APP_DOMAIN_SUFFIX=.dev         # example.com -> example.dev.com
+# REACT_APP_DOMAIN_SUFFIX=             # No suffix (default)
