--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -3,7 +3,10 @@
   command = "npm install && npm run build"
 
 [build.environment]
+  NODE_VERSION = "16.14.0"
+  NPM_FLAGS = "--version"
   NODE_ENV = "production"
+  CI = "false"
 
 [[redirects]]
   from = "/api/*"
@@ -21,11 +24,3 @@
   from = "/*"
   to = "/index.html"
   status = 200
-
-[dev]
-  framework = "#custom"
-  command = "npm start"
-  targetPort = 3000
-  port = 8888
-  publish = "dist"
-  autoLaunch = false
