--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,54 @@
+# Dependencies
 node_modules/
-node_modules/.package-lock.json
+.pnp
+.pnp.js
+
+# Environment variables
 .env
-.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build directories
+/build
+/dist
+/coverage
+/client/dist
+
+# Logs
+logs
 *.log
-npm-debug.log
-build/
-dist/
-coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
+
+# Netlify
+.netlify/
+.netlify/state.json
+.netlify/cache/
+
+# Local development
+.vercel
+.vercel_build_output.log
+
+# Misc
+.cache/
+.temp/
+.tmp/
+.vercel_build_output/
+.next/
+.nuxt/
+.cache/
+.parcel-cache/
+.parcel-cache-*/
