chore: optimize Netlify build config with custom build script and npm settings

--- a/client/.npmrc
+++ b/client/.npmrc
@@ -1,13 +1,11 @@
 # Save exact version of packages in package-lock.json
 save-exact = true
 
-# Use package-lock.json (enabled by default in npm 5+)
+# Use package-lock.json
 package-lock = true
 
 # Disable package-lock.json creation
 # package-lock = false
-
-# Set the package manager to use
 engine-strict = true
 
 # Set the registry (if using a private registry)
