chore: optimize Netlify build configuration and streamline npm settings

--- a/client/.npmrc
+++ b/client/.npmrc
@@ -1,24 +1,12 @@
-# Save exact version of packages in package-lock.json
-save-exact = true
+# Minimal .npmrc for Netlify
+# Disable package-lock since we're using npm ci
+package-lock=false
 
-# Use package-lock.json
-package-lock = true
+# Set log level
+loglevel=warn
 
-# Disable package-lock.json creation
-# package-lock = false
-engine-strict = true
-
-# Set the registry (if using a private registry)
-# registry=https://registry.npmjs.org/
-
-# Set the cache directory
-cache = .npm-cache
-
-# Set the log level (silent, error, warn, notice, http, timing, info, verbose, silly)
-loglevel = warn
-
-# Disable progress bars for CI environments
-progress = true
+# Enable strict engine version checking
+engine-strict=true
 
 # Disable color output for CI environments
 color = true
