--- a/netlify.toml
+++ b/netlify.toml
@@ -1,42 +1,26 @@
-# This file tells Netlify how to build and serve your site
+# Netlify Configuration
 
 [build]
-  # Base directory for the build
   base = "client"
-  # Directory containing the built files
   publish = "dist"
-  # Command to build the site
-  command = "chmod +x netlify-build.sh && ./netlify-build.sh"
+  command = "npm install --force && npm run build"
 
 [build.environment]
-  # Set Node.js version - must match .nvmrc
   NODE_VERSION = "16.14.0"
-  # Set npm version
   NPM_VERSION = "8.19.4"
-  # Set environment to production
   NODE_ENV = "production"
-  # Disable CI to prevent build issues
   CI = "false"
-  # Disable package-lock generation during install
-  NPM_CONFIG_PACKAGE_LOCK = "false"
-  # Disable npm update notifier
-  NPM_CONFIG_UPDATE_NOTIFIER = "false"
-  # Set npm cache directory
-  NPM_CONFIG_CACHE = "/opt/build/.npm"
-  # Enable npm cache
-  NPM_CONFIG_CACHE_MIN = "9999999"
-  # Disable npm fund messages
-  NPM_CONFIG_FUND = "false"
-  # Disable npm audit
-  NPM_CONFIG_AUDIT = "false"
-  # Set npm log level
+  
+  # NPM Configuration
   NPM_CONFIG_LOGLEVEL = "warn"
-  # Disable telemetry
+  NPM_CONFIG_AUDIT = "false"
+  NPM_CONFIG_FUND = "false"
+  NPM_CONFIG_UPDATE_NOTIFIER = "false"
   NEXT_TELEMETRY_DISABLED = "1"
 
 # Production context settings
 [context.production]
-  command = "chmod +x netlify-build.sh && ./netlify-build.sh"
+  command = "npm install --force && npm run build"
   [context.production.environment]
     NODE_ENV = "production"
     NODE_OPTIONS = "--max_old_space_size=1024"
