--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
-# Netlify Configuration
+# Netlify Configuration - Using Custom Build Script
 
 [build]
   base = "client"
   publish = "dist"
-  command = "npm install --force && npm run build"
+  command = "chmod +x netlify-build.sh && ./netlify-build.sh"
 
 [build.environment]
   NODE_VERSION = "16.14.0"
@@ -11,16 +11,18 @@
   NODE_ENV = "production"
   CI = "false"
   
-  # NPM Configuration
-  NPM_CONFIG_LOGLEVEL = "warn"
-  NPM_CONFIG_AUDIT = "false"
-  NPM_CONFIG_FUND = "false"
+  # Disable npm config that might cause issues
   NPM_CONFIG_UPDATE_NOTIFIER = "false"
+  NPM_CONFIG_FUND = "false"
+  NPM_CONFIG_AUDIT = "false"
+  NPM_CONFIG_LOGLEVEL = "warn"
+  
+  # Disable Next.js telemetry
   NEXT_TELEMETRY_DISABLED = "1"
 
 # Production context settings
 [context.production]
-  command = "npm install --force && npm run build"
+  command = "chmod +x netlify-build.sh && ./netlify-build.sh"
   [context.production.environment]
     NODE_ENV = "production"
     NODE_OPTIONS = "--max_old_space_size=1024"
