--- a/client/package.json
+++ b/client/package.json
@@ -39,9 +39,7 @@
     "react-router-dom": "^6.3.0",
     "axios": "^1.6.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
+    "web-vitals": "^2.1.4",
     "@babel/core": "^7.17.8",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
