--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,12 +1,20 @@
 [build]
   publish = "dist"
-  command = "npm install && npm run build"
+  command = "chmod +x netlify-build.sh && ./netlify-build.sh"
 
 [build.environment]
   NODE_VERSION = "16.14.0"
-  NPM_FLAGS = "--version"
-  NODE_ENV = "production"
+  NPM_VERSION = "8.19.4"
   CI = "false"
+  
+  # Disable npm config that might cause issues
+  NPM_CONFIG_UPDATE_NOTIFIER = "false"
+  NPM_CONFIG_FUND = "false"
+  NPM_CONFIG_AUDIT = "false"
+  NPM_CONFIG_LOGLEVEL = "warn"
+  
+  # Disable Next.js telemetry
+  NEXT_TELEMETRY_DISABLED = "1"
 
 [[redirects]]
   from = "/api/*"
