--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,8 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0",
-    "workbox-webpack-plugin": "^6.4.2"
+    "workbox-webpack-plugin": "^6.4.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "webpack-manifest-plugin": "^5.0.0"
   }
 }
