--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "webpack-merge": "^5.8.0",
     "workbox-webpack-plugin": "^6.4.2",
     "clean-webpack-plugin": "^4.0.0",
-    "webpack-manifest-plugin": "^5.0.0"
+    "webpack-manifest-plugin": "^5.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
